--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,16 @@
 		"string_view": "cpp",
 		"iomanip": "cpp",
 		"ranges": "cpp",
-		"sstream": "cpp"
+		"sstream": "cpp",
+		"filesystem": "cpp",
+		"charconv": "cpp",
+		"format": "cpp",
+		"forward_list": "cpp",
+		"list": "cpp",
+		"mutex": "cpp",
+		"stop_token": "cpp",
+		"thread": "cpp",
+		"xhash": "cpp"
 	},
 	"C_Cpp.default.cppStandard": "c++17",
 }
