--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install build system
         run: |
-          apt update && apt upgrade -y
-          apt install -y build-essential mingw-w64 libc++-dev
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
+          sudo apt update && apt upgrade -y
+          sudo apt install -y build-essential mingw-w64 libc++-dev
+          sudo wget https://apt.llvm.org/llvm.sh
+          sudo chmod +x llvm.sh
           sudo ./llvm.sh 18
       - name: Build
         run: |
