--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,7 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v3
       - name: Build
-        run: |
-           make TARGET=macos
+        run: make TARGET=macos
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -28,13 +27,10 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v3
-      - name: Install build system
-        run: |
-          sudo apt update && apt upgrade -y
-          sudo apt install -y build-essential mingw-w64 libc++-dev
-          sudo wget https://apt.llvm.org/llvm.sh
-          sudo chmod +x llvm.sh
-          sudo ./llvm.sh 18
+      - name: Install lib
+        run: sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get install -y build-essential mingw-w64 libc++-dev
+      - name: Install clang
+        run: sudo wget https://apt.llvm.org/llvm.sh && sudo chmod +x llvm.sh && sudo ./llvm.sh 18
       - name: Build
         run: |
           make TARGET=linux
