--- a/.github/workflows/old.build.yml
+++ b/.github/workflows/old.build.yml
@@ -9,6 +9,19 @@ permissions:
   contents: write
 
 jobs:
+  buildMac:
+    runs-on: macos-latest
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v3
+      - name: Build
+        run: make TARGET=macos
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            update-darwin
   buildWinLnx:
     runs-on: ubuntu-latest
     steps:
